class NotEnoughSeatError(Exception):
    """Raised when event has no free seats left."""