class InvalidTicketTypeError(Exception):
    """Raised when unknown ticket type requested."""