class UserUnverifiedError(Exception):
    """Raised when user does not have a verified passport."""